--- a/index.html
+++ b/index.html
@@ -25,55 +25,67 @@
       </b>
     </h1>
 
-    <h2 class="font-mono">whoami</h2>
-    <p>
-      I'm currently a Computer Science Engineering Student at Toulouse INP-ENSEEIHT, France. 🇫🇷
-    </p>
-    <p>
-      I like learning new technologies and developing some fun projects on my free time!
-    </p>
+    <section id="whoami">
+      <a href="#whoami">
+        <h2 class="font-mono">whoami</h2>
+      </a>
+      <p>
+        I'm currently a Computer Science Engineering Student at Toulouse INP-ENSEEIHT, France. 🇫🇷
+      </p>
+      <p>
+        I like learning new technologies and developing some fun projects on my free time!
+      </p>
+    </section>
 
-    <h2>Résumé</h2>
-    <ul>
-      <li>
-        <a href="https://drive.google.com/file/d/1OgtPLlknZ9Rnd30LbI4ZhfqqICNYkCKS/view" target="_blank"
-          rel="noopener noreferrer">
-          English, A4
-        </a>
-      </li>
-      <li>
-        <a href="https://drive.google.com/file/d/1yBHEKBTkMH6JbtdXDtebfEZt9oa0M-hH/view" target="_blank"
-          rel="noopener noreferrer">
-          English, US Letter
-        </a>
-      </li>
-      <li>
-        <a href="https://drive.google.com/file/d/12__L_higcbQT4j33KDJtenqtvat_QQQw/view" target="_blank"
-          rel="noopener noreferrer">
-          French, A4
-        </a>
-      </li>
-      <li>
-        <a href="https://drive.google.com/file/d/1LeiJc2ezaMVFfatRnmJa0QIrgvCPCsX_/view" target="_blank"
-          rel="noopener noreferrer">
-          French, US Letter
-        </a>
-      </li>
-    </ul>
+    <section id="resume">
+      <a href="#resume">
+        <h2>Résumé</h2>
+      </a>
+      <ul>
+        <li>
+          <a href="https://drive.google.com/file/d/1OgtPLlknZ9Rnd30LbI4ZhfqqICNYkCKS/view" target="_blank"
+            rel="noopener noreferrer">
+            English, A4
+          </a>
+        </li>
+        <li>
+          <a href="https://drive.google.com/file/d/1yBHEKBTkMH6JbtdXDtebfEZt9oa0M-hH/view" target="_blank"
+            rel="noopener noreferrer">
+            English, US Letter
+          </a>
+        </li>
+        <li>
+          <a href="https://drive.google.com/file/d/12__L_higcbQT4j33KDJtenqtvat_QQQw/view" target="_blank"
+            rel="noopener noreferrer">
+            French, A4
+          </a>
+        </li>
+        <li>
+          <a href="https://drive.google.com/file/d/1LeiJc2ezaMVFfatRnmJa0QIrgvCPCsX_/view" target="_blank"
+            rel="noopener noreferrer">
+            French, US Letter
+          </a>
+        </li>
+      </ul>
+    </section>
 
-    <h2>Links</h2>
-    <ul>
-      <li>
-        <a href="https://github.com/NextFire" target="_blank" rel="noopener noreferrer">
-          GitHub
-        </a>
-      </li>
-      <li>
-        <a href="https://www.linkedin.com/in/vun/" target="_blank" rel="noopener noreferrer">
-          LinkedIn
-        </a>
-      </li>
-    </ul>
+    <section id="links">
+      <a href="#links">
+        <h2>Links</h2>
+      </a>
+      <ul>
+        <li>
+          <a href="https://github.com/NextFire" target="_blank" rel="noopener noreferrer">
+            GitHub
+          </a>
+        </li>
+        <li>
+          <a href="https://www.linkedin.com/in/vun/" target="_blank" rel="noopener noreferrer">
+            LinkedIn
+          </a>
+        </li>
+      </ul>
+    </section>
   </main>
 </body>
 
