--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
         <h2 class="font-mono">whoami</h2>
       </a>
       <p>
-        I'm currently a Computer Science Engineering Student at Toulouse INP-ENSEEIHT, France. 🇫🇷
+        I'm currently a <b>Software Development Engineer</b> at <b>Criteo</b>.
+        I am based in <b>Paris, France</b> 🇫🇷.
       </p>
       <p>
         I like learning new technologies and developing some fun projects on my free time!
