keep only A4 resumes

--- a/index.html
+++ b/index.html
@@ -46,25 +46,13 @@
         <li>
           <a href="https://drive.google.com/file/d/1OgtPLlknZ9Rnd30LbI4ZhfqqICNYkCKS/view" target="_blank"
             rel="noopener noreferrer">
-            English, A4
-          </a>
-        </li>
-        <li>
-          <a href="https://drive.google.com/file/d/1yBHEKBTkMH6JbtdXDtebfEZt9oa0M-hH/view" target="_blank"
-            rel="noopener noreferrer">
-            English, US Letter
+            English
           </a>
         </li>
         <li>
           <a href="https://drive.google.com/file/d/12__L_higcbQT4j33KDJtenqtvat_QQQw/view" target="_blank"
             rel="noopener noreferrer">
-            French, A4
-          </a>
-        </li>
-        <li>
-          <a href="https://drive.google.com/file/d/1LeiJc2ezaMVFfatRnmJa0QIrgvCPCsX_/view" target="_blank"
-            rel="noopener noreferrer">
-            French, US Letter
+            French
           </a>
         </li>
       </ul>
