Update job title to Software Development Engineer II

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <h2 class="font-mono">whoami</h2>
       </a>
       <p>
-        I'm currently a <b>Software Development Engineer</b> at <b>Criteo</b>.
+        I'm currently a <b>Software Development Engineer II</b> at <b>Criteo</b>.
         I am based in <b>Paris, France</b> 🇫🇷.
       </p>
       <p>
