Change 'Résumé' to 'Resume' in index.html

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <section id="resume">
       <a href="#resume">
-        <h2>Résumé</h2>
+        <h2>Resume</h2>
       </a>
       <ul>
         <li>
